# txd-example-clients

./: .gitignore  LICENSE.md  README.md
nodejs/: configuration.ts  create_did.ts  keypair.ts  logger.ts  minimal.ts  package.json  submitTx.ts
rust/: Cargo.toml  metadata.scale
rust/src/: hello_world.rs
