[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.13"
blake2 = "0.10.4"
clap = { version = "4.0.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
hex = "0.4.3"
reqwest = {version = "0.11.12", features = ["json"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
subxt = "0.24.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }

[[bin]]
name = "hello-world"
path = "src/hello_world.rs"
